Converts try finally block to try-with-resources. Closes #162.